--- a/styles.css
+++ b/styles.css
@@ -9,6 +9,9 @@ a{
 	text-decoration: none;
 	color: white;
 }
+i{
+	font-weight: lighter
+}
 #background-image{
 	min-height: 100%;
     min-width: 1024px;
@@ -192,7 +195,7 @@ a{
 	font-size: 25px
 }
 #section3{
-	background-color: rgba(33, 55, 79,1);
+	background-color: rgba(33, 55, 79,.8);
 	height: 300px;
 	width: 100%;
 	font-size: 20px;
@@ -203,7 +206,7 @@ a{
     float: left;
 }
 #section4{
-	background-color: #14283e;
+	background-color: rgba(20, 40, 62, .8);
 	height: 300px;
 	width: 100%;
 	font-size: 20px;
@@ -219,7 +222,7 @@ a{
     float: right;
 }
 #section5{
-	background-color: rgba(33, 55, 79,1);
+	background-color: rgba(33, 55, 79,.8);
 	height: 300px;
 	width: 100%;
 	font-size: 20px;
