--- a/styles.css
+++ b/styles.css
@@ -10,7 +10,14 @@ a{
 	color: white;
 }
 i{
-	font-weight: lighter
+	font-weight: lighter;
+	font-size: 90px !important;
+	margin: 10% 15%;
+    color: white;
+}
+italics{
+	font-weight: lighter;
+    font-style: italic;
 }
 #background-image{
 	min-height: 100%;
@@ -130,10 +137,10 @@ i{
 #logoSpace{
 	background-color: rgba(33, 55, 79,.8);
 	width: 100%;
-	padding: 1em 0 6em 0;
+	padding: 2em 0 2em 0;
 	font-size: 20px;
 	position: relative;
-	margin: 10px 0px;
+	margin: 50px 0px;
 }
 #logoSpace h1{
 	text-align: center;
@@ -172,10 +179,19 @@ i{
 #section2{
 	background-color: rgba(33, 55, 79,.8);
 	width: 100%;
-	padding: 6em 0 6em 0;
+	padding: 4em 0 4em 0;
 	font-size: 20px;
 	text-align: center;
-	position: relative
+	position: relative;
+	margin-bottom: 50px;
+}
+#section2 .content h2{
+	border-bottom: solid 2px white;
+    display: block;
+    padding-bottom: 1em;
+    position: relative;
+    color: white;
+
 }
 #section2 h2{
 	border-bottom: solid 2px white;
@@ -304,13 +320,26 @@ i{
 }
 .content{
 	max-width: 48em;
-   /*  width: 60%; */
-    padding: 2em 2em 0.1em 4em;
+    width: 48%;
+    padding: 10px 5px;
+    display: inline-block;
+    text-align: left;
+    vertical-align: top;
 }
 .content h2{
 	display: inline-block
 }.content p{
 	margin-top: 0;
+}
+.contentLeft{
+	width: 29%;
+	display: inline-block;
+	vertical-align: top
+}
+.contentRight{
+	width: 69%;
+	display: inline-block;
+	vertical-align: top
 }
 .contentContainer{
 	width: 54%;
@@ -328,6 +357,9 @@ i{
 	}
 	#section2{
 		font-size: 17px
+	}
+	#section2 .content{
+		width: 80%
 	}
 	#portraitContainer{
 		display: block;
