--- a/styles.css
+++ b/styles.css
@@ -284,10 +284,10 @@ italics{
 	font-size: 20px;
 }
 #section7{
-	background-color: #1C2329;
+	background-color: rgba(28, 35, 41,0.8);
 	height: 100px;
 	width: 100%;
-	padding: 6em 0 4em 0;
+	padding: 1em 0 1em 0;
 	text-align: center;
 	color: #8D9194;
 	font-size: 20px
