removed section 6 padding

--- a/styles.css
+++ b/styles.css
@@ -385,7 +385,7 @@ italics{
 		margin-top: 0;
 	}
 	#section6{
-		padding: 4em 0 4em 0;
+		/* padding: 4em 0 4em 0; */
 	}
 	#s6Left{
 		display: block;
