removed min height from transparent background class

--- a/styles.css
+++ b/styles.css
@@ -74,7 +74,7 @@ italics{
 .transparentBackground{
 	height: 100vh;
 	width: 100%;
-	min-height: 560px;
+/* 	min-height: 560px; */
 	position: relative;
 	justify-content: center;
 	text-align: center;
