--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,7 @@
+a{
+	text-decoration: none;
+	color: white;
+}
 body{
 	background-color: #14283e;
 	font-size: 0;
@@ -5,9 +9,29 @@ body{
 	margin: 0;
 	font-family: 'Open Sans';
 }
-a{
-	text-decoration: none;
-	color: white;
+blockquote {
+  margin: 1.5em 10px;
+  padding: 0.5em 10px;
+  quotes: "\201C""\201D""\2018""\2019";
+}
+blockquote:before {
+  color: #ccc;
+  content: open-quote;
+  font-size: 4em;
+  line-height: 0.1em;
+  margin-right: 0.25em;
+  vertical-align: -0.4em;
+}
+blockquote:after {
+  color: #ccc;
+  content: close-quote;
+  font-size: 4em;
+  line-height: 0.1em;
+  margin-left: 0.25em;
+  vertical-align: -0.4em;
+}
+blockquote p {
+  display: inline;
 }
 i{
 	font-weight: lighter;
@@ -19,6 +43,7 @@ italics{
 	font-weight: lighter;
     font-style: italic;
 }
+
 #background-image{
 	min-height: 100%;
     min-width: 1024px;
@@ -45,12 +70,31 @@ italics{
 	height: 50px;
 	width: 100%;
 	background-color: #14283e;
-	color: white;
-	
+	color: white;	
+}
+#menuLogo{
+	display: inline-block
+}
+#menuLogo h2{
+	margin: 2px 0 0 20px;
+}
+#menuLogo h2:before{
+	background: white;
+    content: '';
+    display: block;
+    height: 2px;
+}
+#menuLogo h2:after{
+	background: white;
+    content: '';
+    display: block;
+    height: 2px;
 }
 #menuButtons{
 	float: right;
 	padding: 10px 0px;
+	vertical-align: top;
+	display: inline-block
 }
 #menuButtons a {
 	text-decoration: none;
