--- a/styles.css
+++ b/styles.css
@@ -44,6 +44,15 @@ italics{
     font-style: italic;
 }
 
+red{
+	color: red;
+}
+
+h2 > a{
+	font-size: 30px;
+	color: red;
+}
+
 #background-image{
 	min-height: 100%;
     min-width: 1024px;
@@ -57,6 +66,9 @@ italics{
 }
 #brandWrapper{
 	margin: 0 12%;
+}
+#brandWrapper h4{
+	color: white;
 }
 #centerContainer{
 	margin: 0 15%;
@@ -237,7 +249,7 @@ italics{
     color: white;
 
 }
-.contentContainers h2{
+.contentContainers h1{
 	border-bottom: solid 2px white;
     display: inline-block;
     padding-bottom: 1em;
