--- a/styles.css
+++ b/styles.css
@@ -44,13 +44,8 @@ italics{
     font-style: italic;
 }
 
-red{
-	color: red;
-}
-
-h2 > a{
-	font-size: 30px;
-	color: red;
+bold{
+	font-weight: 900
 }
 
 #background-image{
@@ -84,23 +79,32 @@ h2 > a{
 	background-color: #14283e;
 	color: white;	
 }
+#bottomBlock{
+	position: absolute;
+	width: 100%;
+	height: 2px;
+	background-color: white;
+	bottom: 3px;
+}
+#topBlock{
+	position: absolute;
+	width: 100%;
+	height: 2px;
+	background-color: white;
+	top: 3px;
+}
 #menuLogo{
-	display: inline-block
+	display: inline-block;
+	font-size: 30px;
+	color: white;
+	padding: 0;
+	margin-left: 20px;
+	margin-top: 4px;
+	position: relative;
+    font-weight: bold;
 }
 #menuLogo h2{
 	margin: 2px 0 0 20px;
-}
-#menuLogo h2:before{
-	background: white;
-    content: '';
-    display: block;
-    height: 2px;
-}
-#menuLogo h2:after{
-	background: white;
-    content: '';
-    display: block;
-    height: 2px;
 }
 #menuButtons{
 	float: right;
